--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="profile.html">profile</a>
     "To be continued"
+    <a href="https://camt.cmu.ac.th/index.php/th/">CAMT web page</a>
 </body>
 </html>
