--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="profile.html">profile</a>
+    <a href="https://camt.cmu.ac.th/index.php/th/">CAMT web page</a>
 </body>
 </html>
