add friend profile

--- a/Yit_profile.html
+++ b/Yit_profile.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">profile</a>
-    "To be continued"
-    <a href="https://camt.cmu.ac.th/index.php/th/">CAMT web page</a>
-
-    <a href="Yit_profile.html">Yit's profile</a>
-
+    <h1>Natcha Petchsrikul</h1>
+    <a href="index.html">index</a>
 </body>
 </html>
