add friend image

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <a href="profile.html">profile</a>
+
     "To be continued"
     <a href="https://camt.cmu.ac.th/index.php/th/">CAMT web page</a>
 
     <a href="Yit_profile.html">Yit's profile</a>
+
+
+    <img src="MyImage.png">
 
 </body>
 </html>
